--- a/bootstrap/AboutMe.html
+++ b/bootstrap/AboutMe.html
@@ -5,11 +5,12 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://html5-templates.com/" />
-    <title>Bootstrap Template</title>
-	<meta name="description" content="A minimalist Bootstrap theme by StartBootstrap. Contains everything you need to get started building your website. All you have to do is change the text and images.">
+    <title>Collin Gorman's Portfolio</title>
+    <meta name="description" content="A minimalist Bootstrap theme by StartBootstrap. Contains everything you need to get started building your website. All you have to do is change the text and images.">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/modern-business.css" rel="stylesheet">
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 </head>
 
 <body>
@@ -24,21 +25,23 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
-                </button>
+</button>
                 <a class="navbar-brand" href="index.html">Collin Gorman</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                    <li>
+                    <li class="active">
                         <a href="aboutme.html">About Me</a>
                     </li>
+
                     <li>
                         <a href="contact.html">Contact</a>
                     </li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Projects<b class="caret"></b></a>
                         <ul class="dropdown-menu">
+
                             <li>
                                 <a href="portfolio-item.html">PC Pro Certification</a>
                             </li>
@@ -48,14 +51,18 @@
                             <li>
                                 <a href="portfolio-pc.html">PC Creation</a>
                             </li>
-                        </ul>
-                        <li>
-                            <a href="about.html">Resume</a>
+                          </ul>
                         </li>
-                        <li>
+                            <li>
+                                <a href="about.html">Resume</a>
+                            </li>
+                            <li>
                             <a href="acomplishments.html">Certifications</a>
-                        </li>
-            <!-- /.navbar-collapse -->
+                             </li>
+                </ul>
+
+            </div>
+<!-- /.navbar-collapse -->
         </div>
         <!-- /.container -->
     </nav>
@@ -66,12 +73,13 @@
         <!-- Page Heading/Breadcrumbs -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Resume and Cover Letter
+                <h1 class="page-header">About Me
+
                 </h1>
                 <ol class="breadcrumb">
                     <li><a href="index.html">Home</a>
                     </li>
-                    <li class="active">Resume and Cover Letter</li>
+                    <li class="active">About</li>
                 </ol>
             </div>
         </div>
@@ -80,28 +88,19 @@
         <!-- Intro Content -->
         <div class="row">
             <div class="col-md-6">
-                <img class="img-responsive" src="resume.png" alt="">
+                <img class="img-responsive" src="coll.jpg" alt="">
             </div>
             <div class="col-md-6">
+                <h2>Skills and Attributes</h2>
+                <p>I have 3 years of experience in the IT field gained from my Technical School BVT, where I am enrolled in the IT shop. I currently have my Testout PC Pro Certification.</p>
+                <p>My greatest strength I feel I have is being able to heavily apply myself to any task should the task lay within my interests. I am also capable of working with all sorts of personalities should I need to.</p>
+                <p>I am most proficient with my PC Repair and Troubleshooting skills and am most interested in that sort of field and wish to pursue a career within that area of work.</p>
+
+                <h2>Job Experience</h2>
+                <p>I have worked at my local ice cream shoppe during the summer for the past two years and am currently looking into acquiring more professional job settings.</p>
             </div>
         </div>
-        <!-- /.row -->
-
-        <!-- Team Members -->
-        <div class="row">
-            <div class="col-lg-12">
-                <h2 class="page-header">Cover Letter and Certifications</h2>
-            </div>
-            <div class="col-md-4 text-center">
-                <div class="thumbnail">
-                    <img class="img-responsive" src="cover.png" alt="">
-                    <div class="caption">
-                        <h3>Cover Letter<br>
-                        </h3>
-                    </div>
-                </div>
-            </div>
-        <hr>
+<hr>
 
         <!-- Footer -->
         <footer>
