--- a/bootstrap/acomplishments.html
+++ b/bootstrap/acomplishments.html
@@ -5,8 +5,8 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://html5-templates.com/" />
-    <title>Bootstrap Template</title>
-	<meta name="description" content="A minimalist Bootstrap theme by StartBootstrap. Contains everything you need to get started building your website. All you have to do is change the text and images.">
+    <title>Collin Gorman's Portfolio</title>
+    <meta name="description" content="A minimalist Bootstrap theme by StartBootstrap. Contains everything you need to get started building your website. All you have to do is change the text and images.">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/modern-business.css" rel="stylesheet">
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -27,34 +27,37 @@
                 </button>
                 <a class="navbar-brand" href="index.html">Collin Gorman</a>
             </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
+<!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
                         <a href="aboutme.html">About Me</a>
                     </li>
+
                     <li>
                         <a href="contact.html">Contact</a>
                     </li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Projects<b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li>
-                                <a href="portfolio-item.html">PC Pro Certification</a>
-                            </li>
-                            <li>
-                                <a href="portfolio-Cisco.html">Cisco Case Study</a>
-                            </li>
-                            <li>
-                                <a href="portfolio-pc.html">PC Creation</a>
-                            </li>
+                          <li>
+                              <a href="portfolio-item.html">PC PRO Certification</a>
+                          </li>
+                          <li>
+                              <a href="portfolio-Cisco.html">Cisco Case Study</a>
+                          </li>
+                          <li>
+                              <a href="portfolio-pc.html">PC Creation</a>
                         </ul>
-                        <li>
-                            <a href="about.html">Resume</a>
-                        </li>
-                        <li>
-                            <a href="acomplishments.html">Certifications</a>
-                        </li>
+                    </li>
+                    <li>
+                      <a href="about.html">Resume</a>
+                    </li>
+                    <li class="active">
+                        <a href="acomplishments.html">Certifications</a>
+                    </li>
+                </ul>
+            </div>
             <!-- /.navbar-collapse -->
         </div>
         <!-- /.container -->
@@ -66,43 +69,26 @@
         <!-- Page Heading/Breadcrumbs -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Resume and Cover Letter
+                <h1 class="page-header">Achievements
+
                 </h1>
                 <ol class="breadcrumb">
                     <li><a href="index.html">Home</a>
                     </li>
-                    <li class="active">Resume and Cover Letter</li>
+                    <li class="active">Achievements</li>
                 </ol>
             </div>
         </div>
         <!-- /.row -->
+       <h2>Certifications</h2>
+       <ul>
+         <h1><li>Ten-Hour OSHA Certification</li></hi>
+         <img src="osha.png">
+         <li>TestOut PC Pro Certification</li>
+         <img src="Project1.png">
+       </ul>
 
-        <!-- Intro Content -->
-        <div class="row">
-            <div class="col-md-6">
-                <img class="img-responsive" src="resume.png" alt="">
-            </div>
-            <div class="col-md-6">
-            </div>
-        </div>
-        <!-- /.row -->
-
-        <!-- Team Members -->
-        <div class="row">
-            <div class="col-lg-12">
-                <h2 class="page-header">Cover Letter and Certifications</h2>
-            </div>
-            <div class="col-md-4 text-center">
-                <div class="thumbnail">
-                    <img class="img-responsive" src="cover.png" alt="">
-                    <div class="caption">
-                        <h3>Cover Letter<br>
-                        </h3>
-                    </div>
-                </div>
-            </div>
-        <hr>
-
+       </ul>
         <!-- Footer -->
         <footer>
             <div class="row">
