--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -30,69 +30,31 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="about.html">About</a>
+                        <a href="aboutme.html">About Me</a>
                     </li>
-                    <li>
-                        <a href="services.html">Services</a>
-                    </li>
+
                     <li>
                         <a href="contact.html">Contact</a>
                     </li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Portfolio <b class="caret"></b></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Projects<b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li>
-                                <a href="portfolio-1-col.html">1 Column Portfolio</a>
+                                <a href="portfolio-item.html">PC Pro Certification</a>
                             </li>
                             <li>
-                                <a href="portfolio-2-col.html">2 Column Portfolio</a>
+                                <a href="portfolio-Cisco.html">Cisco Case Study</a>
                             </li>
                             <li>
-                                <a href="portfolio-3-col.html">3 Column Portfolio</a>
-                            </li>
-                            <li>
-                                <a href="portfolio-4-col.html">4 Column Portfolio</a>
-                            </li>
-                            <li>
-                                <a href="portfolio-item.html">Single Portfolio Item</a>
+                                <a href="portfolio-PC.html">PC Creation</a>
                             </li>
                         </ul>
-                    </li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Blog <b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li>
-                                <a href="blog-home-1.html">Blog Home 1</a>
-                            </li>
-                            <li>
-                                <a href="blog-home-2.html">Blog Home 2</a>
-                            </li>
-                            <li>
-                                <a href="blog-post.html">Blog Post</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Other Pages <b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li>
-                                <a href="full-width.html">Full Width Page</a>
-                            </li>
-                            <li>
-                                <a href="sidebar.html">Sidebar Page</a>
-                            </li>
-                            <li>
-                                <a href="faq.html">FAQ</a>
-                            </li>
-                            <li>
-                                <a href="404.html">404</a>
-                            </li>
-                            <li>
-                                <a href="pricing.html">Pricing Table</a>
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
+                        <li>
+                            <a href="about.html">Resume</a>
+                        </li>
+                        <li>
+                            <a href="acomplishments.html">Certifications</a>
+                        </li>
             </div>
             <!-- /.navbar-collapse -->
         </div>
@@ -111,21 +73,21 @@
         <!-- Wrapper for slides -->
         <div class="carousel-inner">
             <div class="item active">
-                <div class="fill" style="background-image:url('https://placehold.it/1900x1080&text=Image One');"></div>
+                <div class="fill" style="background-image:url('project1.png');"></div>
                 <div class="carousel-caption">
-                    <h2>The first slider caption</h2>
+                    <h2></h2>
                 </div>
             </div>
             <div class="item">
-                <div class="fill" style="background-image:url('https://placehold.it/1900x1080&text=Image Two');"></div>
+                <div class="fill" style="background-image:url('project2_3.png');"></div>
                 <div class="carousel-caption">
-                    <h2>Second caption</h2>
+                    <h2></h2>
                 </div>
             </div>
             <div class="item">
-                <div class="fill" style="background-image:url('https://placehold.it/1900x1080&text=Image Three');"></div>
+                <div class="fill" style="background-image:url('project3_2.jpg');"></div>
                 <div class="carousel-caption">
-                    <h2>Third caption comes here</h2>
+                    <h2></h2>
                 </div>
             </div>
         </div>
@@ -142,47 +104,7 @@
     <!-- Page Content -->
     <div class="container">
 
-        <!-- Marketing Icons Section -->
-        <div class="row">
-            <div class="col-lg-12">
-                <h1 class="page-header">
-                    Modern Business by StartBootstrap
-                </h1>
-            </div>
-            <div class="col-md-4">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h4><i class="fa fa-fw fa-check"></i> Bootstrap v3.3.7</h4>
-                    </div>
-                    <div class="panel-body">
-                        <p></p>
-                        <a href="#" class="btn btn-default">Learn More</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h4><i class="fa fa-fw fa-gift"></i> Free &amp; Open Source</h4>
-                    </div>
-                    <div class="panel-body">
-                        <p></p>
-                        <a href="#" class="btn btn-default">Learn More</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h4><i class="fa fa-fw fa-compass"></i></h4>
-                    </div>
-                    <div class="panel-body">
-                        <p></p>
-                        <a href="#" class="btn btn-default">Learn More</a>
-                    </div>
-                </div>
-            </div>
-        </div>
+
         <!-- /.row -->
 
 
@@ -194,150 +116,62 @@
 
 			<div class="col-sm-4 col-lg-4 col-md-4">
 				<div class="thumbnail">
-					<img src="https://placehold.it/320x150" alt="">
-					<div class="caption">
-						<h4 class="pull-right"></h4>
-						<h4><a href="#">First Product</a></h4>
-						<p></p>
-					</div>
-					<div class="ratings">
-						<p class="pull-right"></p>
-						<p>
-							<span class="glyphicon glyphicon-star"></span>
-							<span class="glyphicon glyphicon-star"></span>
-							<span class="glyphicon glyphicon-star"></span>
-							<span class="glyphicon glyphicon-star"></span>
-							<span class="glyphicon glyphicon-star"></span>
-						</p>
-					</div>
+          <a href="portfolio-item.html">
+          <img src="Project1.PNG" alt="">
+
 				</div>
 			</div>
 
 			<div class="col-sm-4 col-lg-4 col-md-4">
 				<div class="thumbnail">
-					<img src="https://placehold.it/320x150" alt="">
-					<div class="caption">
-						<h4 class="pull-right"></h4>
-						<h4><a href="#">Second Product</a></h4>
-						<p></p>
-					</div>
-					<div class="ratings">
-						<p class="pull-right"></p>
-						<p>
-							<span class="glyphicon glyphicon-star"></span>
-							<span class="glyphicon glyphicon-star"></span>
-							<span class="glyphicon glyphicon-star"></span>
-							<span class="glyphicon glyphicon-star"></span>
-							<span class="glyphicon glyphicon-star-empty"></span>
-						</p>
-					</div>
+         <a href="portfolio-Cisco.html">
+          <img src="project2_3.PNG" alt="">
+        </a>
 				</div>
 			</div>
 
 			<div class="col-sm-4 col-lg-4 col-md-4">
 				<div class="thumbnail">
-					<img src="https://placehold.it/320x150" alt="">
-					<div class="caption">
-						<h4 class="pull-right"></h4>
-						<h4><a href="#">Third Product</a></h4>
-						<p></p>
-					</div>
-					<div class="ratings">
-						<p class="pull-right"></p>
-						<p>
-							<span class="glyphicon glyphicon-star"></span>
-							<span class="glyphicon glyphicon-star"></span>
-							<span class="glyphicon glyphicon-star"></span>
-							<span class="glyphicon glyphicon-star"></span>
-							<span class="glyphicon glyphicon-star-empty"></span>
-						</p>
-					</div>
+          <a href="portfolio-pc.html">
+          <img src="Project3_2.JPG" alt="">
+
 				</div>
 			</div>
-
-			<div class="col-sm-4 col-lg-4 col-md-4">
-				<div class="thumbnail">
-					<img src="https://placehold.it/320x150" alt="">
-					<div class="caption">
-						<h4 class="pull-right">$84.99</h4>
-						<h4><a href="#">Fourth Product</a></h4>
-						<p>This is a short description. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-					</div>
-					<div class="ratings">
-						<p class="pull-right">6 reviews</p>
-						<p>
-							<span class="glyphicon glyphicon-star"></span>
-							<span class="glyphicon glyphicon-star"></span>
-							<span class="glyphicon glyphicon-star"></span>
-							<span class="glyphicon glyphicon-star-empty"></span>
-							<span class="glyphicon glyphicon-star-empty"></span>
-						</p>
-					</div>
-				</div>
-			</div>
-
-			<div class="col-sm-4 col-lg-4 col-md-4">
-				<div class="thumbnail">
-					<img src="https://placehold.it/320x150" alt="">
-					<div class="caption">
-						<h4 class="pull-right"></h4>
-						<h4><a href="#">Fifth Product</a></h4>
-						<p></p>
-					</div>
-					<div class="ratings">
-						<p class="pull-right"></p>
-						<p>
-							<span class="glyphicon glyphicon-star"></span>
-							<span class="glyphicon glyphicon-star"></span>
-							<span class="glyphicon glyphicon-star"></span>
-							<span class="glyphicon glyphicon-star"></span>
-							<span class="glyphicon glyphicon-star-empty"></span>
-						</p>
-					</div>
-				</div>
-			</div>
-
-			<div class="col-sm-4 col-lg-4 col-md-4">
-				<h4><a href="#"></a></h4>
-				<p></p>
-				<a class="btn btn-primary" target="_blank" href="#"></a>
-			</div>
-
 		</div>
 
         <!-- Portfolio Section -->
-        <div class="row">
+        <div class="row"
             <div class="col-lg-12">
-                <h2 class="page-header">Portfolio Heading</h2>
+                <h2 class="page-header"></h2>
             </div>
             <div class="col-md-4 col-sm-6">
                 <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="https://placehold.it/700x450" alt="">
+                    <img class="img-responsive img-portfolio img-hover" src="" alt="">
                 </a>
             </div>
             <div class="col-md-4 col-sm-6">
                 <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="https://placehold.it/700x450" alt="">
+                    <img class="img-responsive img-portfolio img-hover" src="" alt="">
                 </a>
             </div>
             <div class="col-md-4 col-sm-6">
                 <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="https://placehold.it/700x450" alt="">
+                    <img class="img-responsive img-portfolio img-hover" src="" alt="">
                 </a>
             </div>
             <div class="col-md-4 col-sm-6">
                 <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="https://placehold.it/700x450" alt="">
+                    <img class="img-responsive img-portfolio img-hover" src="" alt="">
                 </a>
             </div>
             <div class="col-md-4 col-sm-6">
                 <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="https://placehold.it/700x450" alt="">
+                    <img class="img-responsive img-portfolio img-hover" src="" alt="">
                 </a>
             </div>
             <div class="col-md-4 col-sm-6">
                 <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="https://placehold.it/700x450" alt="">
+                    <img class="img-responsive img-portfolio img-hover" src="" alt="">
                 </a>
             </div>
         </div>
@@ -346,23 +180,15 @@
         <!-- Features Section -->
         <div class="row">
             <div class="col-lg-12">
-                <h2 class="page-header">Modern Business Features</h2>
+                <h2 class="page-header"></h2>
             </div>
             <div class="col-md-6">
-                <p>The Modern Business template by Start Bootstrap includes:</p>
-                <ul>
-                    <li><strong>Bootstrap v3.3.7</strong>
-                    </li>
-                    <li>jQuery v1.11.1</li>
-                    <li>Font Awesome v4.2.0</li>
-                    <li>Working PHP contact form with validation</li>
-                    <li>Unstyled page elements for easy customization</li>
-                    <li>17 HTML pages</li>
+
                 </ul>
                 <p></p>
             </div>
             <div class="col-md-6">
-                <img class="img-responsive" src="project1.PNG" alt="">
+                <img class="img-responsive" src="" alt="">
             </div>
         </div>
         <!-- /.row -->
@@ -375,9 +201,7 @@
                 <div class="col-md-8">
                     <p></p>
                 </div>
-                <div class="col-md-4">
-                    <a class="btn btn-lg btn-primary btn-block" href="#">Call to Action</a>
-                </div>
+
             </div>
         </div>
 
@@ -387,7 +211,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website, year | <a href="https://html5-templates.com/" target="_blank" rel="nofollow">HTML5 Templates</a></p>
+                    <p>    Copyright &copy; Collin Gorman, 2019 <a href="" target="_blank" rel="nofollow"></a></p>
                 </div>
             </div>
         </footer>
