--- a/bootstrap/portfolio-Cisco.html
+++ b/bootstrap/portfolio-Cisco.html
@@ -33,28 +33,29 @@
                     <li>
                         <a href="aboutme.html">About Me</a>
                     </li>
+
                     <li>
                         <a href="contact.html">Contact</a>
                     </li>
                     <li class="dropdown active">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Projects<b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li>
-                                <a href="portfolio-item.html">PC PRO Certification</a>
-                            </li>
-                            <li>
-                                <a href="portfolio-Cisco.html">Cisco Case Study</a>
-                            </li>
-                            <li>
-                                <a href="portfolio-pc.html">PC Creation</a>
-                            </li>
-                        </ul>
-                        <li>
-                            <a href="about.html">Resume</a>
-                        </li>
-                        <li>
-                            <a href="acomplishments.html">Certifications</a>
-                        </li>
+                      <a href="#" class="dropdown-toggle" data-toggle="dropdown">Projects<b class="caret"></b></a>
+                      <ul class="dropdown-menu">
+                          <li>
+                              <a href="portfolio-item.html">PC Pro Certification</a>
+                          </li>
+                          <li>
+                              <a href="portfolio-Cisco.html">Cisco Case Study</a>
+                          </li>
+                          <li>
+                              <a href="portfolio-pc.html">PC Creation</a>
+                          </li>
+                      </ul>
+                      <li>
+                          <a href="about.html">Resume</a>
+                      </li>
+                      <li>
+                          <a href="acomplishments.html">Certifications</a>
+                      </li>
             </div>
             <!-- /.navbar-collapse -->
         </div>
@@ -67,18 +68,18 @@
         <!-- Page Heading/Breadcrumbs -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">PC PRO Certification
+                <h1 class="page-header">Cisco Case Study
                 </h1>
                 <ol class="breadcrumb">
                     <li><a href="index.html">Home</a>
                     </li>
-                    <li class="active">PC Pro Certification</li>
+                    <li class="active">Cisco Case Study</li>
                 </ol>
             </div>
         </div>
         <!-- /.row -->
 
-        <!-- PC Pro Row -->
+        <!-- Portfolio Item Row -->
         <div class="row">
 
             <div class="col-md-8">
@@ -93,13 +94,13 @@
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner">
                         <div class="item active">
-                            <img class="img-responsive" src="Project1.PNG" alt="">
+                            <img class="img-responsive" src="project2_1.png" alt="">
                         </div>
                         <div class="item">
-                            <img class="img-responsive" src="Project1_2.jpg" alt="">
+                            <img class="img-responsive" src="project2_2.png" alt="">
                         </div>
                         <div class="item">
-                            <img class="img-responsive" src="Project1_3.PNG" alt="">
+                            <img class="img-responsive" src="project2_3.png" alt="">
                         </div>
                     </div>
 
@@ -115,13 +116,13 @@
 
             <div class="col-md-4">
                 <h3>Project Description</h3>
-                <p>This project displays the proof of quality for my work in this course. I took a long extensive course learning about PC repair and troubleshooting skills. The course itself took about a year to overcome with this certificate displaying these efforts. This course also displays the demonstrated skills with computer hardware and operating systems that I have. </p>
+                <p>This project shows the efforts and quality of work I displayed during this course. I took a course with which to increase my understanding of fundamental networking concepts and technologies. This course also helped with my ability to work both with physical and digital equipment. This project was the epitome of all these aforementioned skills.</p>
             </div>
 
         </div>
         <!-- /.row -->
 
-        <!-- Other Projects Row -->
+        <!-- Related Projects Row -->
         <div class="row">
 
             <div class="col-lg-12">
@@ -129,14 +130,14 @@
             </div>
 
             <div class="col-sm-3 col-xs-6">
-                <a href="#">
-                    <img class="img-responsive img-hover img-related" src="Project2_3.PNG" alt="">
+                <a href="portfolio-item.html">
+                    <img class="img-responsive img-hover img-related" src="project1.png" alt="">
                 </a>
             </div>
 
             <div class="col-sm-3 col-xs-6">
-                <a href="#">
-                    <img class="img-responsive img-hover img-related" src="Project3_2.JPG" alt="">
+                <a href="portfolio-pc.html">
+                    <img class="img-responsive img-hover img-related" src="project3_2.jpg" alt="">
                 </a>
             </div>
 
