--- a/bootstrap/portfolio-pc.html
+++ b/bootstrap/portfolio-pc.html
@@ -33,6 +33,7 @@
                     <li>
                         <a href="aboutme.html">About Me</a>
                     </li>
+
                     <li>
                         <a href="contact.html">Contact</a>
                     </li>
@@ -67,12 +68,12 @@
         <!-- Page Heading/Breadcrumbs -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">PC PRO Certification
+                <h1 class="page-header">PC Creation
                 </h1>
                 <ol class="breadcrumb">
                     <li><a href="index.html">Home</a>
                     </li>
-                    <li class="active">PC Pro Certification</li>
+                    <li class="active">PC Creation</li>
                 </ol>
             </div>
         </div>
@@ -93,13 +94,13 @@
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner">
                         <div class="item active">
-                            <img class="img-responsive" src="Project1.PNG" alt="">
+                            <img class="img-responsive" src="Project3_1.JPG" alt="">
                         </div>
                         <div class="item">
-                            <img class="img-responsive" src="Project1_2.jpg" alt="">
+                            <img class="img-responsive" src="Project3_2.jpg" alt="">
                         </div>
                         <div class="item">
-                            <img class="img-responsive" src="Project1_3.PNG" alt="">
+                            <img class="img-responsive" src="Project3_3.jpg" alt="">
                         </div>
                     </div>
 
@@ -115,7 +116,7 @@
 
             <div class="col-md-4">
                 <h3>Project Description</h3>
-                <p>This project displays the proof of quality for my work in this course. I took a long extensive course learning about PC repair and troubleshooting skills. The course itself took about a year to overcome with this certificate displaying these efforts. This course also displays the demonstrated skills with computer hardware and operating systems that I have. </p>
+                <p>This was a project during sophomore year I partook in where we had to create our own PCs from scratch. This project acted as the most notable tests of the skills we’ve acquired throughout the course. Before this project we had to determine, as a class, which parts would work the best and vote on them. Though we had to create these PCs by ourselves to test our skills and we would use these PCs for the rest of the course.</p>
             </div>
 
         </div>
@@ -129,14 +130,14 @@
             </div>
 
             <div class="col-sm-3 col-xs-6">
-                <a href="#">
-                    <img class="img-responsive img-hover img-related" src="Project2_3.PNG" alt="">
+                <a href="portfolio-item.html">
+                    <img class="img-responsive img-hover img-related" src="Project1.PNG" alt="">
                 </a>
             </div>
 
             <div class="col-sm-3 col-xs-6">
-                <a href="#">
-                    <img class="img-responsive img-hover img-related" src="Project3_2.JPG" alt="">
+                <a href="portfolio-Cisco.html">
+                    <img class="img-responsive img-hover img-related" src="Project2_3.png" alt="">
                 </a>
             </div>
 
