--- a/bootstrap/AboutMe.html
+++ b/bootstrap/AboutMe.html
@@ -59,6 +59,9 @@
                             <li>
                             <a href="acomplishments.html">Certifications</a>
                              </li>
+                             <li>
+                                 <a href="ActionPlan.html">Action Plan</a>
+                             </li>
                 </ul>
 
             </div>
