--- a/bootstrap/ActionPlan.html
+++ b/bootstrap/ActionPlan.html
@@ -36,11 +36,11 @@
                     <li>
                         <a href="contact.html">Contact</a>
                     </li>
-                    <li class="dropdown active">
+                    <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Projects<b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li>
-                                <a href="portfolio-item.html">PC PRO Certification</a>
+                                <a href="portfolio-item.html">PC Pro Certification</a>
                             </li>
                             <li>
                                 <a href="portfolio-Cisco.html">Cisco Case Study</a>
@@ -58,7 +58,6 @@
                         <li>
                             <a href="ActionPlan.html">Action Plan</a>
                         </li>
-            </div>
             <!-- /.navbar-collapse -->
         </div>
         <!-- /.container -->
@@ -70,82 +69,31 @@
         <!-- Page Heading/Breadcrumbs -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">PC PRO Certification
+                <h1 class="page-header">Junior Career Action Plan
                 </h1>
                 <ol class="breadcrumb">
                     <li><a href="index.html">Home</a>
                     </li>
-                    <li class="active">PC Pro Certification</li>
+                    <li class="active">Career Action Plan</li>
                 </ol>
             </div>
         </div>
         <!-- /.row -->
 
-        <!-- PC Pro Row -->
+        <!-- Intro Content -->
         <div class="row">
+            <div class="col-md-6">
+                <iframe src="JuniorCareer.pdf" width="1150px" height="2100px"</iframe>
+            </div>
+            <div class="col-md-6">
+            </div>
+        </div>
+        <!-- /.row -->
 
-            <div class="col-md-8">
-                <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-                    <!-- Indicators -->
-                    <ol class="carousel-indicators">
-                        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-                    </ol>
-
-                    <!-- Wrapper for slides -->
-                    <div class="carousel-inner">
-                        <div class="item active">
-                            <img class="img-responsive" src="Project1.PNG" alt="">
-                        </div>
-                        <div class="item">
-                            <img class="img-responsive" src="Project1_2.jpg" alt="">
-                        </div>
-                        <div class="item">
-                            <img class="img-responsive" src="Project1_3.PNG" alt="">
-                        </div>
+        <!-- Team Members -->
                     </div>
-
-                    <!-- Controls -->
-                    <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
-                        <span class="glyphicon glyphicon-chevron-left"></span>
-                    </a>
-                    <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
-                        <span class="glyphicon glyphicon-chevron-right"></span>
-                    </a>
                 </div>
             </div>
-
-            <div class="col-md-4">
-                <h3>Project Description</h3>
-                <p>This project displays the proof of quality for my work in this course. I took a long extensive course learning about PC repair and troubleshooting skills. The course itself took about a year to overcome with this certificate displaying these efforts. This course also displays the demonstrated skills with computer hardware and operating systems that I have. </p>
-            </div>
-
-        </div>
-        <!-- /.row -->
-
-        <!-- Other Projects Row -->
-        <div class="row">
-
-            <div class="col-lg-12">
-                <h3 class="page-header">Other Projects</h3>
-            </div>
-
-            <div class="col-sm-3 col-xs-6">
-                <a href="portfolio-Cisco.html">
-                    <img class="img-responsive img-hover img-related" src="Project2_3.PNG" alt="">
-                </a>
-            </div>
-
-            <div class="col-sm-3 col-xs-6">
-                <a href="portfolio-pc.html">
-                    <img class="img-responsive img-hover img-related" src="Project3_2.JPG" alt="">
-                </a>
-            </div>
-
-        </div>
-        <!-- /.row -->
-
         <hr>
 
         <!-- Footer -->
