--- a/bootstrap/about.html
+++ b/bootstrap/about.html
@@ -55,6 +55,9 @@
                         <li>
                             <a href="acomplishments.html">Certifications</a>
                         </li>
+                        <li>
+                            <a href="ActionPlan.html">Action Plan</a>
+                        </li>
             <!-- /.navbar-collapse -->
         </div>
         <!-- /.container -->
@@ -90,7 +93,7 @@
         <!-- Team Members -->
         <div class="row">
             <div class="col-lg-12">
-                <h2 class="page-header">Cover Letter and Certifications</h2>
+                <h2 class="page-header">Cover Letter</h2>
             </div>
             <div class="col-md-4 text-center">
                 <div class="thumbnail">
