--- a/bootstrap/acomplishments.html
+++ b/bootstrap/acomplishments.html
@@ -56,6 +56,9 @@
                     <li class="active">
                         <a href="acomplishments.html">Certifications</a>
                     </li>
+                    <li>
+                        <a href="ActionPlan.html">Action Plan</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
