--- a/bootstrap/contact.html
+++ b/bootstrap/contact.html
@@ -55,6 +55,9 @@
                           <li>
                           <a href="acomplishments.html">Certifications</a>
                         </li>
+                        <li>
+                            <a href="ActionPlan.html">Action Plan</a>
+                        </li>
             </div>
             <!-- /.navbar-collapse -->
         </div>
